--- a/style.css
+++ b/style.css
@@ -46,3 +46,37 @@ body {
   font-size: 30px;
   color: red;
 }
+
+.questions-btn {
+  padding: 10px;
+  background-color: lightblue;
+  border: 1px solid black;
+  border-radius: 20px;
+}
+
+.true-btn {
+  background-color: lime;
+}
+
+.false-btn {
+  background-color: red;
+}
+
+.tf-btn {
+  padding: 20px;
+  border-radius: 10px;
+}
+
+#button-container {
+  padding: 40px;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+}
+p {
+  font-family: sans-serif;
+  font-size: 20px;
+  
+}
