--- a/style.css
+++ b/style.css
@@ -48,10 +48,16 @@ body {
 }
 
 .questions-btn {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
   padding: 20px;
   background-color: lightblue;
   border: 1px solid black;
   border-radius: 20px;
+  gap: 20px;
 }
 
 .true-btn {
