--- a/style.css
+++ b/style.css
@@ -49,11 +49,12 @@ body {
 
 .questions-btn {
   width: 100%;
+  height: 100px;
   display: flex;
   flex-direction: row;
   justify-content: center;
   align-items: center;
-  padding: 20px;
+  padding: 40px;
   background-color: lightblue;
   border: 1px solid black;
   border-radius: 20px;
