--- a/style.css
+++ b/style.css
@@ -4,12 +4,16 @@
   box-sizing: border-box;
 }
 
+h1 {
+  color: whitesmoke;
+}
+
 body {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  background-color: lightgrey;
+  background-color: #003049;
 }
 
 .container {
@@ -23,6 +27,7 @@ body {
 }
 
 .textcontent {
+  color: whitesmoke;
   display: flex;
   flex-direction: column;
   text-align: center;
@@ -47,15 +52,20 @@ body {
   color: red;
 }
 
-.questions-btn {
-  width: 100%;
-  height: 100px;
+.category-buttons {
   display: flex;
-  flex-direction: row;
   justify-content: center;
   align-items: center;
+  padding: 50px;
+  gap: 50px;
+}
+
+.questions-btn {
+  text-align: center;
+  width: 220px;
+  height: 100px;
   padding: 40px;
-  background-color: lightblue;
+  background-color: #669bbc;
   border: 1px solid black;
   border-radius: 20px;
   gap: 20px;
@@ -83,9 +93,4 @@ body {
 p {
   font-family: sans-serif;
   font-size: 20px;
-}
-
-.category-buttons {
-  padding: 50px;
-  gap: 50px;
 }
